--- a/scenarios/basic.cfg
+++ b/scenarios/basic.cfg
@@ -2,7 +2,7 @@
 # It doesn't matter if you use capital letters or not.
 # It doesn't matter if you use underscore or camel notation for keys, e.g. episode_timeout is the same as episodeTimeout.
 
-doom_scenario_path = basic2.wad
+doom_scenario_path = basic.wad
 doom_map = map01
 
 # Rewards
@@ -11,9 +11,9 @@ living_reward = -1
 # Rendering options
 screen_resolution = RES_320X240
 screen_format = CRCGCB
-render_hud = false
+render_hud = true
 render_crosshair = true
-render_weapon = false
+render_weapon = true
 render_decals = false
 render_particles = false
 window_visible = true
