--- a/scenarios/basic.cfg
+++ b/scenarios/basic.cfg
@@ -10,13 +10,13 @@ living_reward = -1
 
 # Rendering options
 screen_resolution = RES_320X240
-screen_format = CRCGCB
+screen_format = GRAY8
+
 render_hud = true
-render_crosshair = true
+render_crosshair = false
 render_weapon = true
 render_decals = false
 render_particles = false
-window_visible = true
 
 # make episodes start after 20 tics (after unholstering the gun)
 episode_start_time = 14
