--- a/scenarios/health_gathering.cfg
+++ b/scenarios/health_gathering.cfg
@@ -5,14 +5,14 @@
 doom_scenario_path = health_gathering.wad
 
 # Each step is good for you!
-living_reward = 1
+living_reward = 0.1
 # And death is not!
-death_penalty = 100
+death_penalty = 10
 
 # Rendering options
-screen_resolution = RES_320X240
+screen_resolution = RES_640X480
 screen_format = GRAY8
-render_hud = false
+render_hud = true
 render_crosshair = false
 render_weapon = false
 render_decals = false
