--- a/scenarios/deadly_corridor.cfg
+++ b/scenarios/deadly_corridor.cfg
@@ -8,7 +8,7 @@ doom_scenario_path = deadly_corridor.wad
 doom_skill = 5
 
 # Rewards
-death_penalty = 100
+death_penalty = 10
 #living_reward = 0
 
 # Rendering options
@@ -24,13 +24,13 @@ window_visible = true
 episode_timeout = 2100
 
 # Available buttons
+# Removed 'MOVE_BACKWARD'
 available_buttons = 
 	{ 
 		MOVE_LEFT 
 		MOVE_RIGHT 
 		ATTACK 
 		MOVE_FORWARD
-		MOVE_BACKWARD
 		TURN_LEFT
 		TURN_RIGHT
 	}
