--- a/scenarios/deadly_corridor.cfg
+++ b/scenarios/deadly_corridor.cfg
@@ -4,11 +4,11 @@
 
 doom_scenario_path = deadly_corridor.wad
 
-# Skill 5 is reccomanded for the scenario to be a challenge.
+# Skill 5 is recommended for the scenario to be a challenge.
 doom_skill = 5
 
 # Rewards
-death_penalty = 100
+death_penalty = 10
 #living_reward = 0
 
 # Rendering options
@@ -24,13 +24,13 @@ window_visible = true
 episode_timeout = 2100
 
 # Available buttons
+# Removed 'MOVE_BACKWARD'
 available_buttons = 
 	{ 
 		MOVE_LEFT 
 		MOVE_RIGHT 
 		ATTACK 
 		MOVE_FORWARD
-		MOVE_BACKWARD
 		TURN_LEFT
 		TURN_RIGHT
 	}
