1 layer measurements done

--- a/scenarios/defend_the_line.cfg
+++ b/scenarios/defend_the_line.cfg
@@ -19,6 +19,7 @@ window_visible = true
 
 # make episodes start after 10 tics (after unholstering the gun)
 episode_start_time = 10
+episode_timeout = 2100
 
 
 # Available buttons
@@ -33,4 +34,4 @@ available_buttons =
 available_game_variables = {  AMMO2 HEALTH}
 
 mode = PLAYER
-doom_skill = 3
+doom_skill = 4
